@@ -18,11 +18,11 @@ DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
-export LLVM_DIR = /usr/lib/llvm-9/lib/cmake/llvm/
-export Clang_DIR = /usr/lib/llvm-9/lib/cmake/clang/
- 
-clang_archs = amd64 armel armhf arm64 i386 mips mipsel mips64el \
-	ppc64 ppc64el s390x sparc64 \
+llvm_ver = $(shell sed -n 's/.*\bllvm-\([^[:space:]]*\)-dev.*/\1/p' debian/control)
+clang_archs = $(shell sed -n 's/.*\bllvm-[^[:space:]]*-dev[[:space:]]*\[\(.*\)\].*/\1/p' debian/control)
+
+export LLVM_DIR = /usr/lib/llvm-$(llvm_ver)/lib/cmake/llvm/
+export Clang_DIR = /usr/lib/llvm-$(llvm_ver)/lib/cmake/clang/
 
 with_doxywizard = $(if $(findstring stage1,$(DEB_BUILD_PROFILES)),no,yes)
 
